Null handling and simplified id creation